[project]
name = "jarvis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.9.0",
    "hf-xet>=1.1.5",
    "pillow>=11.3.0",
    "piper-tts>=1.3.0",
    "sounddevice>=0.5.2",
    "soundfile>=0.13.1",
    "timm>=1.0.17",
    "transformers>=4.53.3",
    "triton>=3.3.1",
    "flash-attn>=2.8.1",
    "bitsandbytes>=0.46.1",
    "librosa>=0.11.0",
]
